[gd_scene load_steps=2 format=2]

[ext_resource path="res://SaveAndLoad.gd" type="Script" id=1]

[node name="SaveAndLoad" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer"]
margin_top = 236.0
margin_right = 800.0
margin_bottom = 265.0
text = "保存"

[node name="Button2" type="Button" parent="CenterContainer"]
margin_top = 269.0
margin_right = 800.0
margin_bottom = 298.0
text = "载入"

[node name="Button4" type="Button" parent="CenterContainer"]
margin_top = 302.0
margin_right = 800.0
margin_bottom = 331.0
text = "返回主菜单"

[node name="AcceptDialog" type="ConfirmationDialog" parent="CenterContainer/Button4"]
margin_left = 472.0
margin_top = -46.0
margin_right = 568.0
margin_bottom = 30.0
input_pass_on_modal_close_click = false
window_title = "请确认"
dialog_text = "确定返回到主菜单？"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CenterContainer"]
margin_top = 335.0
margin_right = 800.0
margin_bottom = 364.0
text = "关闭"

[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="confirmed" from="CenterContainer/Button4/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="mouse_entered" from="CenterContainer/Button4/AcceptDialog" to="." method="_on_AcceptDialog_mouse_entered"]
[connection signal="pressed" from="CenterContainer/Button3" to="." method="_on_Button3_pressed"]
